--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna!</a>
+    <ul>
+    <li><a href="recipes/lasagna.html">Lasagna!</a></li>
+    <li><a href="recipes/gochuchang-chicken.html">Sweet and Spicy Gochujang Chicken</a></li>
+    <li><a href="recipes/ranch-chicken-tacos.html">Ranch Chicken Tacos</a></li>
+</ul>
 </body>
 </html>
