--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lasagna!</title>
 </head>
 <body>
     <h1>Lasagna!</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Feaf2a87ca2376e9dca53110c86de9d30%2F169950474437520231108_182811.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
+    <h2>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</h2>
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>Meat</li>
+        <li>Onion and Garlic</li>
+        <li>Crushed Tomatoes, Tomato Sauce, and Tomato Paste</li>
+        <li>Sugar</li>
+        <li>Spice and Seasonings</li>
+        <li>Lasagna Noodles</li>
+        <li>Cheeses</li>
+        <li>Egg</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Make the meat sauce.</li>
+        <li>Cook the noodles</li>
+        <li>Make the ricotta mixture</li>
+        <li>Layer the lasagna according to the instructions below</li>
+        <li>Cover with foil and bake</li>
+        <li>Let the lasagna rest before serving</li>
+    </ol>
 </body>
 </html>
